--- a/index.html
+++ b/index.html
@@ -3,58 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My webpage!</title>
-
-    <style>
-
-        body {
-
-            background: gray;
-            color: white;
-
-            margin: 0;
-            padding: 0;
-
-
-        }
-
-        header{
-
-            background: red;
-            margin: 20px 40px 10px 15px;
-            padding: 20px;
-            
-
-        }
-
-        section {
-
-            background: blue;
-            padding: 20px;
-
-        }
-        footer{
-            background: red;
-            padding: 10px 20px;
-
-        }
-
-
-    </style>
+    <title>My web page</title>
+    <link rel="stylesheet" href="styles.css">
 
 
 </head>
+
+
 <body>
 
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Pages/locations.html">Locations</a></li>
+                <li><a href="Pages/contact.html">Contacts</a></li>
+            </ul>
 
-    <header>header</header>
 
-    <section>triple - section</section>
-    <section> lower section</section>
+        </nav>
 
-    <footer> footer</footer>
+         <h1>HOME</h1>
 
+    </header>
+
+    <section>
+        <div>a</div>
+        <div>b</div>
+        <div>c</div>
+
+    </section>
+    <section>Section 2</section>
+
+    <footer> Footer</footer>
 
 
 </body>
+
+
+
 </html>
